@@ -1,3 +1,7 @@
+MJ 24/02/08
+- Added a "background" parameter to PeakDistribution and improved the docs of
+  DynamicNetwork and OscillatingNetwork.
+
 AM 04/02/08
 - Solved a bug in phase management for both cd and ed
   simulations: at the end of the first experiment, phase was set
